# cpp-backend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: http_server.h  main.cpp  request_handler.h  response_bank.cpp
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: http_server.cpp  json_builder.cpp  json_builder.h  json_loader.cpp  main.cpp  response_bank.cpp  response_bank.h
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  README.md  tcp_client.cpp  tcp_server.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/examples/boost_log/build_debug/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/final_task/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.h
sprint2/problems/logger/solution/src/: api_response_bank.h  http_server.h  json_loader.cpp  logger.cpp  logging_data_bank.h  main.cpp  static_content_response_bank.cpp  static_content_response_bank.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  logger.h  logging_data_bank.cpp  main.cpp  response_bank.cpp
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/static_lib/: CMakeLists.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/tv/precode/: CMakeLists.txt
sprint3/problems/tv/precode/src/: controller.h
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: Dockerfile
(+76 files in other folders)
